--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,9 +3,34 @@ body {
   background-color: #333;
 }
 
-.main-game {
+.container {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.theme-mode-btn {
+  padding: 15px;
+  border-radius: 8px;
+  font-family: Helvetica, sans-serif;
+}
+
+.light {
+  color: #333;
+  background-color: #fff;
+}
+
+.dark {
+  color: #fff;
+  background-color: #333
+}
+
+.main-game {
+  height: 80%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
